<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.auth.LogInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="88dp"
            android:layout_height="61dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="0dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/w_story_logo"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/welcome_login"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="normal" />

        <com.example.storyapp.ui.components.CustomEditText
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:alpha="0"
            android:hint="@string/hint_email"
            android:minHeight="48dp"
            app:type="email"
            tools:alpha="100"
            tools:ignore="VisualLintTextFieldSize" />

        <com.example.storyapp.ui.components.CustomEditText
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:alpha="0"
            android:hint="@string/hint_password"
            android:minHeight="48dp"
            app:type="password"
            tools:alpha="100"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:enabled="false"
            android:text="@string/login"
            tools:ignore="VisualLintButtonSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/have_account"
            android:textAlignment="center"
            android:textSize="14sp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:text="@string/register_here"
            android:textAlignment="center"
            android:textColor="@color/md_theme_light_primary"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarLogin"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>